set "body:overflow-y = scoll" to prevent page jumping.

--- a/nut/themes/default/assets/theme/app.css
+++ b/nut/themes/default/assets/theme/app.css
@@ -2,6 +2,10 @@ a, a:hover, a:active, a:visited, a:focus, a:link {
     text-decoration: none;
 }
 
+body {
+    overflow-y: scroll;
+}
+
 .container {
     width: 50%;
     margin-left: auto;
